--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,6 @@
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
-        "layout",
+        "frontpage",
         "custom"
 ;
