--- a/_sass/_frontpage.scss
+++ b/_sass/_frontpage.scss
@@ -316,7 +316,7 @@ body {
     background-color: transparent;
   }
   .demo-blog__posts > .mdl-card .mdl-card__media {
-    background-image: url('../images/road_big.jpg');
+    // background-image: url('../images/road_big.jpg');
     height: 280px;
   }
   .comments {
