--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -3,86 +3,79 @@ layout: default
 format: blog-index
 ---
 
-
-
-    {% if page.widget-1.title %}
-
-<div class="demo-blog__posts mdl-grid">
-  <div class="mdl-card coffee-pic mdl-cell mdl-cell--8-col">
-    <div class="mdl-card__media mdl-color-text--grey-50" style="background-image: url('{{ site.urlimg }}/{{ page.widget-1.image }}');">
-      <h3><a href="entry.html">{{ page.widget-1.title }}</a></h3>
-    </div>
-    <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
-      <div class="minilogo"></div>
-      <div>
-        <strong>The Newist</strong>
-        <span>2 days ago</span>
+<div class="home">
+  
+      {% if page.widget-1.title %}
+  
+  <div class="demo-blog__posts mdl-grid">
+    <div class="mdl-card mdl-shadow--2dp coffee-pic mdl-cell mdl-cell--8-col">
+      <div class="mdl-card__media mdl-color-text--grey-50" style="background-image: url('{{ site.urlimg }}/{{ page.widget-1.image }}');">
+        <h3 class=" "><a href="entry.html">{{ page.widget-1.title }}</a></h3>
+      </div>
+      <div class="mdl-card__supporting-text meta ">
+        <div class="minilogo"></div>
+        <div>
+          <strong>The Newist</strong>
+          <span>2 days ago</span>
+        </div>
       </div>
     </div>
-  </div>
-    {% endif %}
-
-
-  <div class="mdl-card something-else mdl-cell mdl-cell--8-col mdl-cell--4-col-desktop">
-    <button class="mdl-button mdl-js-ripple-effect mdl-js-button mdl-button--fab mdl-color--accent"><i class="material-icons mdl-color-text--white">add</i></button>
-    <div class="mdl-card__media mdl-color--white mdl-color-text--grey-600">
-      <img src="images/logo.png"> +1,337
-    </div>
-    <div class="mdl-card__supporting-text meta meta--fill mdl-color-text--grey-600">
-      <div>
-        <strong>The Newist</strong>
+      {% endif %}
+  
+  
+    <div class="mdl-card mdl-shadow--2dp something-else mdl-cell mdl-cell--8-col mdl-cell--4-col-desktop">
+      <button class="mdl-button mdl-js-ripple-effect mdl-js-button mdl-button--fab mdl-color--accent"><i class="material-icons mdl-color-text--white">add</i></button>
+      <div class="mdl-card__media mdl-color--white mdl-color-text--grey-600">
+        <img src="images/logo.png"> +1,337
       </div>
-      <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right" for="menubtn">
-        <button class="mdl-menu__item mdl-js-ripple-effect">About</button>
-        <button class="mdl-menu__item mdl-js-ripple-effect">Message</button>
-        <button class="mdl-menu__item mdl-js-ripple-effect">Favorite</button>
-        <button class="mdl-menu__item mdl-js-ripple-effect">Search</button>
-      </ul>
-      <button id="menubtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-        <i class="material-icons">more_vert</i>
-      </button>
-    </div>
-  </div>
-
-
-    {% for post in site.posts %}
-
-
-
-
-  <div class="mdl-card on-the-road-again mdl-cell mdl-cell--12-col">
-    <div class="mdl-card__media mdl-color-text--grey-50" style="background-image: url('{{ site.urlimg }}/{{ post.image.thumb }}');">
-      <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
-    </div>
-    <div class="mdl-color-text--grey-600 mdl-card__supporting-text">
-      {{post.teaser}}
-    </div>
-    <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
-      <div class="minilogo"></div>
-      <div>
-        <strong>The Newist</strong>
-        <span>2 days ago</span>
+      <div class="mdl-card__supporting-text meta meta--fill ">
+        <div>
+          <strong>The Newist</strong>
+        </div>
+        <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right" for="menubtn">
+          <button class="mdl-menu__item mdl-js-ripple-effect">About</button>
+          <button class="mdl-menu__item mdl-js-ripple-effect">Message</button>
+          <button class="mdl-menu__item mdl-js-ripple-effect">Favorite</button>
+          <button class="mdl-menu__item mdl-js-ripple-effect">Search</button>
+        </ul>
+        <button id="menubtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+          <i class="material-icons">more_vert</i>
+        </button>
       </div>
     </div>
+  
+  
+      {% for post in site.posts %}
+  
+  
+  
+  
+    <div class="mdl-card mdl-shadow--2dp on-the-road-again mdl-cell mdl-cell--4-col">
+      <div class="mdl-card__media mdl-color-text--grey-50" style="background-image: url('{{ site.urlimg }}/{{ post.image.thumb }}');">
+        <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
+<!-- <a class="full-picture" href="{{ post.url | prepend: site.baseurl }}"></a> -->
+      </div>
+      <div class=" meta  mdl-card__supporting-text">
+        {{post.teaser}}
+      </div>
+    </div>
+  
+  
+      {% endfor %}
+  
+  
+  
+    <nav class="demo-nav mdl-cell mdl-cell--12-col">
+      <div class="section-spacer"></div>
+      <a href="entry.html" class="demo-nav__button">
+                More
+                <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+                  <i class="material-icons">arrow_forward</i>
+                </button>
+              </a>
+    </nav>
   </div>
-
-
-    {% endfor %}
-
-
-
-  <nav class="demo-nav mdl-cell mdl-cell--12-col">
-    <div class="section-spacer"></div>
-    <a href="entry.html" class="demo-nav__button">
-              More
-              <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                <i class="material-icons">arrow_forward</i>
-              </button>
-            </a>
-  </nav>
-</div>
-
-
+  </div>
 
 
 
