--- a/_sass/_frontpage.scss
+++ b/_sass/_frontpage.scss
@@ -1,13 +1,14 @@
 body {
-  background-image: url('../images/bg.jpg');
-  background-size: cover;
-  background-attachment: fixed;
+  // background-image: url('../images/bg.jpg');
+  // background-size: cover;
+  // background-attachment: fixed;
+  background-color: #f2f2f2;
   // FIXME: Temp. workaround for vertical scrollbars
   margin: 0;
   &::before {
-    background-image: url('../images/head.jpg');
-    background-size: cover;
-    background-attachment: fixed;
+    // background-image: url('../images/head.jpg');
+    // background-size: cover;
+    // background-attachment: fixed;
     content: '';
     will-change: transform;
     z-index: 1;
@@ -56,7 +57,9 @@ body {
     -ms-flex-align: stretch;
     align-items: stretch;
     min-height: 360px;
+
   }
+
   .mdl-card__title {
     padding: 16px;
     -webkit-box-flex: 1;
