--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="{{site.urlimg}}touch/chrome-touch-icon-192x192.png">
+  <link rel="icon" sizes="192x192" href="{{site.urlimg}}/touch/chrome-touch-icon-192x192.png">
 
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,7 +14,7 @@
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
 
   <!-- Tile icon for Win8 (144x144 + tile color) -->
-  <meta name="msapplication-TileImage" content="{{site.urlimg}}touch/ms-touch-icon-144x144-precomposed.png">
+  <meta name="msapplication-TileImage" content="{{site.urlimg}}/touch/ms-touch-icon-144x144-precomposed.png">
   <meta name="msapplication-TileColor" content="#3372DF">
 
   <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
@@ -31,9 +31,9 @@
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-  <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/material.min.css">
-  <script type="text/javascript" src="{{ "/js/material.min.js" | prepend: site.baseurl }}"></script>
+  <link rel="stylesheet" href="{{ site.url }}/css/material.min.css">
+  <script type="text/javascript" src="{{ site.url }}/js/material.min.js"></script>
 
-  <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/main.css">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}/feed.xml" />
+  <link rel="stylesheet" href="{{ site.url }}/css/main.css">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml" />
 </head>
