--- a/_sass/_frontpage.scss
+++ b/_sass/_frontpage.scss
@@ -1,14 +1,14 @@
 body {
-  // background-image: url('../images/bg.jpg');
-  // background-size: cover;
-  // background-attachment: fixed;
-  background-color: #f2f2f2;
+  background-image: url('../images/bg.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: #999;
   // FIXME: Temp. workaround for vertical scrollbars
   margin: 0;
   &::before {
-    // background-image: url('../images/head.jpg');
-    // background-size: cover;
-    // background-attachment: fixed;
+    background-image: url('../images/head.jpg');
+    background-size: cover;
+    background-attachment: fixed;
     content: '';
     will-change: transform;
     z-index: 1;
